@@ -31,10 +31,10 @@ import java.net.URI;
 import java.nio.file.FileVisitResult;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.SimpleFileVisitor;
 import java.nio.file.StandardCopyOption;
 import java.nio.file.attribute.BasicFileAttributes;
+import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.logging.Level;
@@ -65,18 +65,22 @@ import org.apache.maven.index.expr.StringSearchExpression;
 import org.apache.maven.index.updater.IndexUpdateRequest;
 import org.apache.maven.index.updater.IndexUpdater;
 import org.apache.maven.index.updater.ResourceFetcher;
-import org.apache.maven.index.updater.WagonHelper;
 import org.apache.maven.settings.Proxy;
 import org.apache.maven.settings.Server;
 import org.apache.maven.settings.crypto.DefaultSettingsDecryptionRequest;
 import org.apache.maven.settings.crypto.SettingsDecrypter;
 import org.apache.maven.settings.crypto.SettingsDecryptionResult;
+import org.apache.maven.wagon.ConnectionException;
 import org.apache.maven.wagon.ResourceDoesNotExistException;
 import org.apache.maven.wagon.Wagon;
+import org.apache.maven.wagon.WagonException;
+import org.apache.maven.wagon.authentication.AuthenticationException;
 import org.apache.maven.wagon.authentication.AuthenticationInfo;
+import org.apache.maven.wagon.authorization.AuthorizationException;
 import org.apache.maven.wagon.events.TransferListener;
 import org.apache.maven.wagon.providers.http.HttpWagon;
 import org.apache.maven.wagon.proxy.ProxyInfo;
+import org.apache.maven.wagon.repository.Repository;
 import org.codehaus.plexus.ContainerConfiguration;
 import org.codehaus.plexus.DefaultContainerConfiguration;
 import org.codehaus.plexus.DefaultPlexusContainer;
@@ -120,6 +124,9 @@ import org.openide.util.lookup.ServiceProviders;
 import org.openide.util.NbBundle.Messages;
 import org.netbeans.modules.maven.indexer.spi.RepositoryIndexQueryProvider;
 
+//index fields
+//https://maven.apache.org/maven-indexer-archives/maven-indexer-LATEST/indexer-core/
+
 @ServiceProviders({
     @ServiceProvider(service=RepositoryIndexerImplementation.class),
     @ServiceProvider(service=RepositoryIndexQueryProvider.class, position = Integer.MAX_VALUE)
@@ -127,13 +134,6 @@ import org.netbeans.modules.maven.indexer.spi.RepositoryIndexQueryProvider;
 public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementation, RepositoryIndexQueryProvider,
         BaseQueries, ChecksumQueries, ArchetypeQueries, DependencyInfoQueries,
         ClassesQuery, ClassUsageQuery, GenericFindQuery, ContextLoadedQuery {
-
-    static {
-        // XXX patch for LUCENE-10431
-        // should be removed as soon migration from EOL lucene 8 to lucene 9+ is possible
-        // currently blocked by JDK 8 language level requirement of NB
-        MultiTermQuery.secretInit(); // <- remove source file from repo too
-    }
 
     private static final Logger LOGGER = Logger.getLogger(NexusRepositoryIndexerImpl.class.getName());
 
@@ -286,7 +286,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
                 /* id */ repo.getId(),
                 /* repositoryId */ repo.getId(),
                 /* repository */ repo.isLocal() ? new File(repo.getRepositoryPath()) : null,
-                /* indexDirectory */ getIndexDirectory(repo),
+                /* indexDirectory */ getIndexDirectory(repo).toFile(),
                 /* repositoryUrl */ repo.isRemoteDownloadable() ? repo.getRepositoryUrl() : null,
                 /* indexUpdateUrl */ repo.isRemoteDownloadable() ? repo.getIndexUpdateUrl() : null,
                 /* searchable */ true,
@@ -327,7 +327,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
         }
     }    
 
-    private boolean loadIndexingContext2(final RepositoryInfo info) throws IOException {
+    private boolean loadIndexingContext(final RepositoryInfo info) throws IOException {
         boolean index = false;
         LOAD: {
             assert getRepoMutex(info).isWriteAccess();
@@ -401,10 +401,10 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             }
         }
         
-        File loc = getIndexDirectory(info); // index folder
-        if (!indexExists(loc.toPath())) {
+        Path indexDir = getIndexDirectory(info);
+        if (!indexExists(indexDir)) {
             index = true;
-            LOGGER.log(Level.FINER, "Index Not Available: {0} at: {1}", new Object[]{info.getId(), loc.getAbsolutePath()});
+            LOGGER.log(Level.FINER, "Index Not Available: {0} at: {1}", new Object[]{info.getId(), indexDir.toAbsolutePath()});
         }
         
         return index;
@@ -432,29 +432,27 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             }
         }
 
-        int oldMax = BooleanQuery.getMaxClauseCount();
+        int oldMax = IndexSearcher.getMaxClauseCount();
         try {
             int max = oldMax;
             while (true) {
                 IteratorSearchResponse response;
                 try {
-                    BooleanQuery.setMaxClauseCount(max);
+                    IndexSearcher.setMaxClauseCount(max);
                     response = searcher.searchIteratorPaged(isr, contexts);
                     LOGGER.log(Level.FINE, "passed on {0} clauses processing {1} with {2} hits", new Object[] {max, q, response.getTotalHitsCount()});
                     return response;
-                } catch (BooleanQuery.TooManyClauses exc) {
+                } catch (IndexSearcher.TooManyClauses exc) {
                     LOGGER.log(Level.FINE, "TooManyClauses on {0} clauses processing {1}", new Object[] {max, q});
                     max *= 2;
                     if (max > MAX_MAX_CLAUSE) {
                         LOGGER.log(Level.WARNING, "Encountered more than {0} clauses processing {1}", new Object[] {MAX_MAX_CLAUSE, q});
                         return null;
-                    } else {
-                        continue;
                     }
                 }
             }
         } finally {
-            BooleanQuery.setMaxClauseCount(oldMax);
+            IndexSearcher.setMaxClauseCount(oldMax);
         }
     }
 
@@ -534,12 +532,22 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
                         httpwagon.setHttpHeaders(p);
                     }
 
-                    Path tmpStorage = Files.createTempDirectory("index-extraction");
+                    Path tmpStorage = Files.createTempDirectory(getIndexDirectory(), "extractor-");
                     ResourceFetcher fetcher = createFetcher(wagon, listener, wagonAuth, wagonProxy);
                     listener.setFetcher(fetcher);
+
                     IndexUpdateRequest iur = new IndexUpdateRequest(indexingContext, fetcher);
                     iur.setIndexTempDir(tmpStorage.toFile());
+                    iur.setFSDirectoryFactory((File file) -> MMapDirectory.open(file.toPath()));
                     
+                    if (RepositoryPreferences.isMultiThreadedIndexExtractionEnabled()) {
+                        // Thread count for maven-indexer remote index extraction, lucene will create one additional merge
+                        // thread per extractor. 4 seems to be the sweetspot.
+                        iur.setThreads(Math.min(4, Math.max(Runtime.getRuntime().availableProcessors() - 1, 1)));
+                    } else {
+                        iur.setThreads(1);
+                    }
+
                     NotifyingIndexCreator nic = null;
                     for (IndexCreator ic : indexingContext.getIndexCreators()) {
                         if (ic instanceof NotifyingIndexCreator) {
@@ -561,16 +569,14 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
                         fetchFailed = true;
                         throw new IOException("Failed to load maven-index for: " + indexingContext.getRepositoryUrl(), ex);
                     } finally {
-                        if (fetchFailed) {
-                            try{
-                                // make sure no big files remain after extraction failure
-                                cleanupDir(tmpStorage);
-                            } catch (IOException ex) {
-                                LOGGER.log(Level.WARNING, "cleanup failed");
-                            }
-                        }
                         if (nic != null) {
                             nic.end();
+                        }
+                        try{
+                            // make sure no temp files remain after extraction
+                            removeDir(tmpStorage);
+                        } catch (IOException ex) {
+                            LOGGER.log(Level.WARNING, "cleanup failed");
                         }
                     }
                 } finally {
@@ -598,8 +604,8 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             if(e.getCause() instanceof ResourceDoesNotExistException) {
                 fireChange(repo, () -> repo.fireNoIndex());
             }
-            Path tmpFolder = Paths.get(System.getProperty("java.io.tmpdir"));
-            Path cacheFolder = Places.getCacheDirectory().toPath();
+            Path tmpFolder = Path.of(System.getProperty("java.io.tmpdir"));
+            Path cacheFolder = getIndexDirectory();
 
             long freeTmpSpace = getFreeSpaceInMB(tmpFolder);
             long freeCacheSpace = getFreeSpaceInMB(cacheFolder);
@@ -607,7 +613,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             if (isNoSpaceLeftOnDevice(e) || freeCacheSpace < 1000 || freeTmpSpace < 1000) {
 
                 long downloaded = listener != null ? listener.getUnits() * 1024 : -1;
-                LOGGER.log(Level.INFO, "Downloaded maven index file has size {0} (zipped). The usable space in {1} is {2} and in {3} MB is {4} MB.",
+                LOGGER.log(Level.INFO, "Downloaded maven index file has size {0} (zipped). The usable space in [cache]:{1} is {2} MB and in [tmp]:{3} is {4} MB.",
                         new Object[] {downloaded, cacheFolder, freeCacheSpace, tmpFolder, freeTmpSpace});
                 LOGGER.log(Level.WARNING, "Download/Extraction failed due to low storage, indexing is now disabled.", e);
 
@@ -616,12 +622,13 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
 
                 IndexingNotificationProvider np = Lookup.getDefault().lookup(IndexingNotificationProvider.class);
                 if(np != null) {
-                    np.notifyError(Bundle.MSG_NoSpace(repo.getName(), cacheFolder.toString(), freeCacheSpace, tmpFolder.toString(), freeTmpSpace));
+                    np.notifyError(Bundle.MSG_NoSpace(repo.getName(), "[cache]:"+cacheFolder.toString(), freeCacheSpace, "[tmp]:"+tmpFolder.toString(), freeTmpSpace));
                 }
                 unloadIndexingContext(repo.getId());
             }
             throw e;
         } catch (Cancellation x) {
+            pauseRemoteRepoIndexing(120); // pause a while
             throw new IOException("canceled indexing", x);
         } catch (ComponentLookupException x) {
             throw new IOException("could not find protocol handler for " + repo.getRepositoryUrl(), x);
@@ -635,6 +642,11 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
                 fireChange(repo, () -> repo.fireIndexChange());
             }
         }
+    }
+
+    private static void pauseRemoteRepoIndexing(int minutes) {
+        LOGGER.log(Level.INFO, "pausing index downloads for {0} {1}.", new Object[] {minutes, ChronoUnit.MINUTES});
+        RepositoryPreferences.pauseIndexDownloadsFor(minutes, ChronoUnit.MINUTES);
     }
 
     private static boolean isNoSpaceLeftOnDevice(Throwable ex) {
@@ -653,8 +665,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
     //spawn the indexing into a separate thread..
     private boolean spawnIndexLoadedRepo(final RepositoryInfo repo) {
 
-        if (!RepositoryPreferences.isIndexDownloadEnabledEffective() && repo.isRemoteDownloadable()) {
-            LOGGER.log(Level.FINE, "Skipping remote index request for {0}", repo);
+        if (shouldSkipIndexRequest(repo)) {
             return false;
         }
 
@@ -664,6 +675,11 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
 
         rp.post(() -> {
             getRepoMutex(repo).writeAccess((Mutex.Action<Void>) () -> {
+
+                if (shouldSkipIndexRequest(repo)) {
+                    return null;
+                }
+
                 try {
                     indexLoadedRepo(repo, true);
                 } catch (IOException ex) {
@@ -678,18 +694,23 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
     @Override
     public void indexRepo(final RepositoryInfo repo) {
         
-        if (!RepositoryPreferences.isIndexDownloadEnabledEffective() && repo.isRemoteDownloadable()) {
-            LOGGER.log(Level.FINE, "Skipping remote index request for {0}", repo);
+        if (shouldSkipIndexRequest(repo)) {
             return;
         }
+
         LOGGER.log(Level.FINER, "Indexing Context: {0}", repo);
         try {
             RemoteIndexTransferListener.addToActive(Thread.currentThread());
             getRepoMutex(repo).writeAccess((Mutex.Action<Void>) () -> {
+
+                if (shouldSkipIndexRequest(repo)) {
+                    return null;
+                }
+
                 try {
                     initIndexer();
                     assert indexer != null;
-                    boolean noIndexExists = loadIndexingContext2(repo);
+                    boolean noIndexExists = loadIndexingContext(repo);
                     //here we always index repo, no matter what RepositoryPreferences.isIndexRepositories() value
                     indexLoadedRepo(repo, !noIndexExists);
                 } catch (IOException x) {
@@ -701,6 +722,25 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             RemoteIndexTransferListener.removeFromActive(Thread.currentThread());
         }
 
+    }
+    
+    private static boolean shouldSkipIndexRequest(RepositoryInfo repo) {
+        if (repo.isRemoteDownloadable()) {
+            if (!RepositoryPreferences.isIndexDownloadEnabledEffective()) {
+                return true;
+            }
+            if (RepositoryPreferences.isIndexDownloadDeniedFor(repo)) {
+                return true;
+            }
+            if (!RepositoryPreferences.isIndexDownloadAllowedFor(repo)) {
+                IndexingNotificationProvider np = Lookup.getDefault().lookup(IndexingNotificationProvider.class);
+                if(np != null) {
+                    np.requestPermissionsFor(repo);
+                }
+                return true;
+            }
+        }
+        return false;
     }
 
     public void shutdownAll() {
@@ -785,7 +825,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
         final ArtifactRepository repository = EmbedderFactory.getProjectEmbedder().getLocalRepository();
         try {
             getRepoMutex(repo).writeAccess((Mutex.ExceptionAction<Void>) () -> {
-                boolean index = loadIndexingContext2(repo);                    
+                boolean index = loadIndexingContext(repo);                    
                 if (index) {    
                     //do not bother indexing
                     return null; 
@@ -863,7 +903,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
         final ArtifactRepository repository = EmbedderFactory.getProjectEmbedder().getLocalRepository();
         try {
             getRepoMutex(repo).writeAccess((Mutex.ExceptionAction<Void>) () -> {
-                boolean index = loadIndexingContext2(repo);
+                boolean index = loadIndexingContext(repo);
                 if (index) {                        
                     return null; //do not bother indexing
                 }
@@ -916,10 +956,6 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
         r.run();
     }
 
-    private File getDefaultIndexLocation() {
-        return Places.getCacheSubdirectory("mavenindex");
-    }
-
     @Override
     public ResultImplementation<String> getGroups(List<RepositoryInfo> repos) {
         return filterGroupIds("", repos);
@@ -950,7 +986,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             } else {
                 mutex.writeAccess((Mutex.Action<Void>) () -> {
                     try {
-                        boolean index = loadIndexingContext2(repo);
+                        boolean index = loadIndexingContext(repo);
                         if (skipUnIndexed && index) {
                             if (!RepositoryPreferences.isIndexRepositories()) {
                                 return null;
@@ -1027,7 +1063,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             IteratorSearchResponse response = repeatedPagedSearch(bq, Collections.singletonList(context), NO_CAP_RESULT_COUNT);
             if (response != null) {
                try {
-                    for (ArtifactInfo ai : response.iterator()) {
+                    for (ArtifactInfo ai : response) {
                         String gav = ai.getGroupId() + ":" + ai.getArtifactId() + ":" + ai.getVersion();
                         if (!infos.contains(gav)) {
                             infos.add(gav);
@@ -1064,7 +1100,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             IteratorSearchResponse response = repeatedPagedSearch(bq, Collections.singletonList(context), MAX_RESULT_COUNT);
             if (response != null) {
                 try {
-                    for (ArtifactInfo ai : response.iterator()) {
+                    for (ArtifactInfo ai : response) {
                         infos.add(convertToNBVersionInfo(ai));
                     }
                 } finally {
@@ -1129,7 +1165,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             IteratorSearchResponse response = repeatedPagedSearch(bq, Collections.singletonList(context), MAX_RESULT_COUNT);
             if (response != null) {
                 try {
-                    for (ArtifactInfo ai : response.iterator()) {
+                    for (ArtifactInfo ai : response) {
                         infos.add(convertToNBVersionInfo(ai));
                     }
                 } finally {
@@ -1231,7 +1267,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             IteratorSearchResponse response = repeatedPagedSearch(q, Collections.singletonList(context), MAX_RESULT_COUNT);
             if (response != null) {
                 try {
-                    for (ArtifactInfo ai : response.iterator()) {
+                    for (ArtifactInfo ai : response) {
                         infos.add(convertToNBVersionInfo(ai));
                     }
                 } finally {
@@ -1315,7 +1351,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             IteratorSearchResponse response = repeatedPagedSearch(bq, Collections.singletonList(context), MAX_RESULT_COUNT);
             if (response != null) {
                 try {
-                    for (ArtifactInfo ai : response.iterator()) {
+                    for (ArtifactInfo ai : response) {
                         infos.add(convertToNBVersionInfo(ai));
                     }
                 } finally {
@@ -1353,7 +1389,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
             IteratorSearchResponse response = repeatedPagedSearch(bq, Collections.singletonList(context), NO_CAP_RESULT_COUNT);
             if (response != null) {
                 try {
-                    for (ArtifactInfo ai : response.iterator()) {
+                    for (ArtifactInfo ai : response) {
                         infos.add(convertToNBVersionInfo(ai));
                     }
                 } finally {
@@ -1518,7 +1554,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
                 IteratorSearchResponse resp = repeatedPagedSearch(bq.build(), Collections.singletonList(context), MAX_RESULT_COUNT);
                 if (resp != null) {
                     try {
-                        for (ArtifactInfo ai : resp.iterator()) {
+                        for (ArtifactInfo ai : resp) {
                             infos.add(convertToNBVersionInfo(ai));
                         }
                     } finally {
@@ -1561,8 +1597,8 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
     public List<RepositoryInfo> getLoaded(final List<RepositoryInfo> repos) {
         final List<RepositoryInfo> toRet = new ArrayList<>(repos.size());
         for (final RepositoryInfo repo : repos) {
-            File loc = getIndexDirectory(repo); // index folder
-            if (indexExists(loc.toPath())) {
+            Path loc = getIndexDirectory(repo); // index folder
+            if (indexExists(loc)) {
                 toRet.add(repo);
             }
         }
@@ -1608,9 +1644,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
         //not to implemenent Iterator.remove().
         //we need to copy to our own list instead of removing from original.
         ArrayList<ArtifactInfo> altArtifactInfos = new ArrayList<>();
-        Iterator<ArtifactInfo> it = artifactInfos.iterator();        
-        while (it.hasNext()) {
-            ArtifactInfo ai = it.next();
+        for (ArtifactInfo ai : artifactInfos) {
             Matcher m = patt.matcher(ai.getClassNames());
             if (m.matches()) {
                 altArtifactInfos.add(ai);
@@ -1687,42 +1721,29 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
         
     }
     
-    private WagonHelper.WagonFetcher createFetcher(final Wagon wagon, TransferListener listener, AuthenticationInfo authenticationInfo, ProxyInfo proxyInfo) {
-        if(isDiag()) {
-            return new WagonHelper.WagonFetcher(wagon, listener, authenticationInfo, proxyInfo) {
-                @Override
-                public InputStream retrieve(String name) throws IOException, FileNotFoundException {
-                    String id = wagon.getRepository().getId();
-                    if(name.contains("properties") && System.getProperty("maven.diag.index.properties." + id) != null) { // NOI18N
-                        LOGGER.log(Level.INFO, "maven indexer will use local properties file: {0}", System.getProperty("maven.diag.index.properties." + id)); // NOI18N
-                        return new FileInputStream(new File(System.getProperty("maven.diag.index.properties." + id))); // NOI18N
-                    } else if(name.contains(".gz") && System.getProperty("maven.diag.index.gz." + id) != null) { // NOI18N
-                        LOGGER.log(Level.INFO, "maven indexer will use gz file: {0}", System.getProperty("maven.diag.index.gz." + id)); // NOI18N
-                        return new FileInputStream(new File(System.getProperty("maven.diag.index.gz." + id))); // NOI18N
-                    }
-                    return super.retrieve(name);
-                }
-            };
-        } else {
-            return new WagonHelper.WagonFetcher(wagon, listener, authenticationInfo, proxyInfo);
-        }
+    private ResourceFetcher createFetcher(final Wagon wagon, TransferListener listener, AuthenticationInfo authenticationInfo, ProxyInfo proxyInfo) {
+        return new WagonFetcher(wagon, listener, authenticationInfo, proxyInfo);
     }
 
-    private File getIndexDirectory(final RepositoryInfo info) {
-        return new File(getDefaultIndexLocation(), info.getId());
+    private static Path getIndexDirectory() {
+        return Places.getCacheSubdirectory("mavenindex").toPath();
     }
 
-    private Path getAllGroupCacheFile(final RepositoryInfo info) {
-        return new File(getIndexDirectory(info), GROUP_CACHE_ALL_PREFIX + "." + GROUP_CACHE_ALL_SUFFIX).toPath();
+    private static Path getIndexDirectory(final RepositoryInfo info) {
+        return getIndexDirectory().resolve(info.getId());
     }
 
-    private Path getRootGroupCacheFile(final RepositoryInfo info) {
-        return new File(getIndexDirectory(info), GROUP_CACHE_ROOT_PREFIX + "." + GROUP_CACHE_ROOT_SUFFIX).toPath();
+    private static Path getAllGroupCacheFile(final RepositoryInfo info) {
+        return getIndexDirectory(info).resolve(GROUP_CACHE_ALL_PREFIX + "." + GROUP_CACHE_ALL_SUFFIX);
+    }
+
+    private static Path getRootGroupCacheFile(final RepositoryInfo info) {
+        return getIndexDirectory(info).resolve(GROUP_CACHE_ROOT_PREFIX + "." + GROUP_CACHE_ROOT_SUFFIX);
     }
 
     private void storeGroupCache(RepositoryInfo repoInfo, IndexingContext ic) throws IOException {
 
-        Path indexDir = getIndexDirectory(repoInfo).toPath();
+        Path indexDir = getIndexDirectory(repoInfo);
         Path tempAllCache = Files.createTempFile(indexDir, GROUP_CACHE_ALL_PREFIX, GROUP_CACHE_ALL_SUFFIX);
         Path tempRootCache = Files.createTempFile(indexDir, GROUP_CACHE_ROOT_PREFIX, GROUP_CACHE_ROOT_SUFFIX);
         try {
@@ -1737,7 +1758,126 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
         }
     }
 
-    private static void cleanupDir(Path path) throws IOException {
+    // somewhat based on maven-indexer impl (in WagonHelper) prior to removal in maven-indexer 7.0.0
+    private static class WagonFetcher implements ResourceFetcher {
+
+        private final TransferListener listener;
+        private final AuthenticationInfo authenticationInfo;
+        private final ProxyInfo proxyInfo;
+        private final Wagon wagon;
+
+        public WagonFetcher(Wagon wagon, TransferListener listener, AuthenticationInfo authenticationInfo, ProxyInfo proxyInfo) {
+            Objects.requireNonNull(wagon);
+            Objects.requireNonNull(listener);
+            this.wagon = wagon;
+            this.listener = listener;
+            this.authenticationInfo = authenticationInfo;
+            this.proxyInfo = proxyInfo;
+        }
+
+        @Override
+        public void connect(String id, String url) throws IOException {
+            Repository repository = new Repository(id, url);
+
+            try {
+                wagon.addTransferListener(listener);
+
+                if (authenticationInfo != null) {
+                    if (proxyInfo != null) {
+                        wagon.connect(repository, authenticationInfo, proxyInfo);
+                    } else {
+                        wagon.connect(repository, authenticationInfo);
+                    }
+                } else {
+                    if (proxyInfo != null) {
+                        wagon.connect(repository, proxyInfo);
+                    } else {
+                        wagon.connect(repository);
+                    }
+                }
+            } catch (AuthenticationException ex) {
+                String msg = "Authentication exception connecting to " + repository;
+                logError(msg, ex);
+                throw new IOException(msg, ex);
+            } catch (WagonException ex) {
+                String msg = "Wagon exception connecting to " + repository;
+                logError(msg, ex);
+                throw new IOException(msg, ex);
+            }
+        }
+
+        @Override
+        public void disconnect() throws IOException {
+            try {
+                wagon.disconnect();
+            } catch (ConnectionException ex) {
+                throw new IOException(ex.toString(), ex);
+            }
+        }
+
+        @Override
+        public InputStream retrieve(String name) throws IOException, FileNotFoundException {
+
+            if (isDiag()) {
+                String id = wagon.getRepository().getId();
+                if(name.endsWith(".properties") && System.getProperty("maven.diag.index.properties." + id) != null) { // NOI18N
+                    LOGGER.log(Level.INFO, "maven indexer will use local properties file: {0}", System.getProperty("maven.diag.index.properties." + id)); // NOI18N
+                    return new FileInputStream(new File(System.getProperty("maven.diag.index.properties." + id))); // NOI18N
+                } else if(name.endsWith(".gz") && System.getProperty("maven.diag.index.gz." + id) != null) { // NOI18N
+                    LOGGER.log(Level.INFO, "maven indexer will use gz file: {0}", System.getProperty("maven.diag.index.gz." + id)); // NOI18N
+                    return new FileInputStream(new File(System.getProperty("maven.diag.index.gz." + id))); // NOI18N
+                }
+            }
+
+            File target = Files.createTempFile(/*getTempIndexDirectory(), */"fetcher-" + name, "").toFile();
+            target.deleteOnExit();
+
+            try {
+                retrieve(name, target);
+            } catch (Cancellation | Exception ex) {
+                target.delete();
+                throw ex;
+            }
+
+            return new FileInputStream(target) {
+                @Override public void close() throws IOException {
+                    super.close();
+                    target.delete();
+                }
+            };
+        }
+
+        public void retrieve(String name, File targetFile) throws IOException {
+            try {
+                wagon.get(name, targetFile);
+            } catch (AuthorizationException e) {
+                targetFile.delete();
+                String msg = "Authorization exception retrieving " + name;
+                logError(msg, e);
+                throw new IOException(msg, e);
+            } catch (ResourceDoesNotExistException e) {
+                targetFile.delete();
+                String msg = "Resource " + name + " does not exist";
+                logError(msg, e);
+                FileNotFoundException fileNotFoundException = new FileNotFoundException(msg);
+                fileNotFoundException.initCause(e);
+                throw fileNotFoundException;
+            } catch (WagonException e) {
+                targetFile.delete();
+                String msg = "Transfer for " + name + " failed";
+                logError(msg, e);
+                throw new IOException(msg + "; " + e.getMessage(), e);
+            }
+        }
+
+        private void logError(String msg, Exception ex) {
+            if (listener != null) {
+                listener.debug(msg + "; " + ex.getMessage());
+            }
+        }
+    }
+
+    private static void removeDir(Path path) throws IOException {
         Files.walkFileTree(path, new SimpleFileVisitor<Path>() {
             @Override
             public FileVisitResult postVisitDirectory(Path dir, IOException exc) throws IOException {
@@ -1753,7 +1893,7 @@ public class NexusRepositoryIndexerImpl implements RepositoryIndexerImplementati
         });
     }
 
-    private long getFreeSpaceInMB(Path path) {
+    private static long getFreeSpaceInMB(Path path) {
         try {
             return Files.getFileStore(path).getUsableSpace() / (1024 * 1024);
         } catch (IOException ignore) {
